--- a/src/main/resources/templates/truck.html
+++ b/src/main/resources/templates/truck.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Создание ТС</title>
-	<meta charset="UTF-8"> 
-	</head>   
+    <title>Создание ТС</title>
+    <meta charset="UTF-8">
+</head>
 
-   <body>
-    <p><h3>Введите данные транспортного средства</h3></p>
-	
-	<div> 
-	<p><form name="truckDetails", method="post">
-	<input name="truckNumber" type="text" placeholder="Рег. номер ТС" size="30"> Введите рег. номер ТС<br>
-	<input name="frontPrice" type="text" placeholder="Цена деления ведущей оси, кг" size="30"> Введите цену деления ведущей оси<br>
-	<input name="rearPrice" type="text" placeholder="Цена деления оси прицепа, кг" size="30"> Введите цену деления оси прицепа<br>
-	<input name="firstWheelWeight" type="text" placeholder="Нагрузка на рулевое колесо, кг" size="30">Введите нагрузку на рулевое колесо<br>
-	<input name="truckWeight" type="text" placeholder="Вес порожнего ТС, кг" size="30">Введите вес порожнего ТС<br>
-	<p><input type="submit" value="Создать">
-	</form></p>
-	
-	
-	</div>
-      
-    </body>
+<body>
+<p>
+<h3>Введите данные транспортного средства</h3>
+
+<div>
+    <form name="truckDetails" method="post">
+    <input id="truckNumber" type="text" placeholder="Рег. номер ТС" size="30">
+    <label for="truckNumber">Введите рег. номер ТС</label><br>
+    <input id="frontPrice" type="text" placeholder="Цена деления ведущей оси, кг" size="30">
+    <label for="frontPrice">Введите цену деления ведущей оси</label><br>
+    <input id="rearPrice" type="text" placeholder="Цена деления оси прицепа, кг" size="30">
+    <label for="rearPrice">Введите цену деления оси прицепа</label><br>
+    <input id="firstWheelWeight" type="text" placeholder="Нагрузка на рулевое колесо, кг" size="30">
+    <label for="firstWheelWeight">Введите нагрузку на рулевое колесо</label><br>
+    <input id="truckWeight" type="text" placeholder="Вес порожнего ТС, кг" size="30">
+    <label for="truckWeight">Введите вес порожнего ТС</label><br>
+    <p><input type="submit" value="Создать"></p>
+        </form>
+
+
+</div>
+
+</body>
 </html>
