--- a/src/main/resources/templates/truckList.html
+++ b/src/main/resources/templates/truckList.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Создание ТС</title>
+    <title>Список ТС</title>
     <meta charset="UTF-8">
 </head>
 
 <body>
 
 
-
-<a th:href="@{measure}">измерения-а-а-а-а</a>
+<h2>Полный список транспортных средств</h2>
 </div>
 
 <table border="1">
     <thead>
     <tr>
         <th>Рег. номер</th>
-        <th>Тягач</th>
-        <th>Прицеп</th>
+        <th>Тягач, 0,1 бар/кг</th>
+        <th>Прицеп, 0,1 бар/кг</th>
+        <th>Масса ТС, кг</th>
     </tr>
     </thead>
     <tbody>
@@ -25,11 +25,14 @@
         <td th:text="${truck.getTruckNumber()}"></td>
         <td th:text="${truck.getFrontPrice()}"></td>
         <td th:text="${truck.getRearPrice()}"></td>
+        <td th:text="${truck.getTruckWeight()}"></td>
     </tr>
-
-
     </tbody>
-</table>
 
+</table>
+<br>
+<form name="CreatNewTruck" th:action="@{/trucks/new}" th:method="get">
+    <input type="submit" value="Создать новый ТС">
+</form>
 </body>
 </html>
