add main menu page and some references to this page from truckCreation and truckList.html

--- a/src/main/resources/templates/newTruck.html
+++ b/src/main/resources/templates/newTruck.html
@@ -33,7 +33,8 @@
     </form>
     <form name="backToList" th:action="@{/trucks/list}" th:method="get">
         <input type="submit" value="Назад к списку ТС"></form>
-
+    <form name="backToMainMEnu" th:action="@{/}" th:method="get">
+        <input type="submit" value="Назад главное меню"></form>
 
 </body>
 </html>
