add measure page reafactored measure.class? MeasureRepository, MeasureService

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,7 +12,7 @@
 <form name="ToTruckList" th:action="@{/trucks/list}" th:method="get">
     <input type="submit" value="Список ТС">
 </form>
-<form name="ToMeasureList" th:action="@{/trucks/list}" th:method="get">
+<form name="ToMeasureList" th:action="@{/measure}" th:method="get">
     <input type="submit" value="Список измерений">
 </form>
 
