--- a/src/main/resources/templates/measureListId.html
+++ b/src/main/resources/templates/measureListId.html
@@ -5,61 +5,63 @@
     <title>Список измерений</title>
 </head>
 <body>
-<form>
+<div th:align="center">
+    <form>
 
-    <form th:object="${greetingsMessage}">
-        <h2 th:text="${greetingsMessage}"></h2>
+        <form th:object="${greetingsMessage}">
+            <h2 th:text="${greetingsMessage}"></h2>
+        </form>
+        <br>
+
+        <h2>Список измерений</h2>
+        <table border="1">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Дата</th>
+                <th>Тягач(бар)</th>
+                <th>Тягач(кг)</th>
+                <th>Прицеп(бар)</th>
+                <th>Прицеп(кг)</th>
+                <th>Вес груза</th>
+                <th>Полная масса</th>
+                <th>Перегрузка</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="measure, iterStat : ${measureList}">
+                <td th:text="*{measure.getId()}">Id</td>
+                <td th:text="${#temporals.format(measure.getDateOfMeasure(), 'dd-MM-yyyy HH:mm')}">Дата</td>
+                <td th:text="*{measure.getFrontBar()}">Тягач(бар)</td>
+                <td th:text="*{measure.getRearWeight()}">Тягач(кг)</td>
+                <td th:text="*{measure.getRearBar()}">Прицеп(бар)</td>
+                <td th:text="*{measure.getRearWeight()}">Прицеп(кг)</td>
+                <td th:text="${measure.getCargoWeight()}">Вес груза</td>
+                <td th:text="${measure.getCompleteWeight()}">Полная масса</td>
+                <td th:text="${measure.isOverloaded()} ?'Перегрузка':'В норме' ">Перегрузка</td>
+            </tr>
+            </tbody>
+        </table>
+        <br>
     </form>
+
+    <h3>Отфильтровать измерения по номеру ТС</h3>
+
+    <form name="listById" th:action="@{/measure/listById}" th:method="get">
+        <select name="truck" th:object="${truckList}">
+            <option value="">--</option>
+            <option th:each="truck : ${truckList}"
+                    th:value="${truck.getId()}"
+                    th:text="${truck.getTruckNumber()}"></option>
+        </select>
+        <input type="submit" value="Фильтровать"></form>
     <br>
-
-    <h2>Список измерений</h2>
-    <table border="1">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Дата</th>
-            <th>Тягач(бар)</th>
-            <th>Тягач(кг)</th>
-            <th>Прицеп(бар)</th>
-            <th>Прицеп(кг)</th>
-            <th>Вес груза</th>
-            <th>Полная масса</th>
-            <th>Перегрузка</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="measure, iterStat : ${measureList}">
-            <td th:text="*{measure.getId()}">Id</td>
-            <td th:text="${measure.getDateOfMeasure()}">Дата</td>
-            <td th:text="*{measure.getFrontBar()}">Тягач(бар)</td>
-            <td th:text="*{measure.getRearWeight()}">Тягач(кг)</td>
-            <td th:text="*{measure.getRearBar()}">Прицеп(бар)</td>
-            <td th:text="*{measure.getRearWeight()}">Прицеп(кг)</td>
-            <td th:text="${measure.getCargoWeight()}">Вес груза</td>
-            <td th:text="${measure.getCompleteWeight()}">Полная масса</td>
-            <td th:text="${measure.isOverloaded()}" th:if="true">Перегрузка</td>
-        </tr>
-        </tbody>
-    </table>
+    <form name="backToMainMEnu" th:action="@{/}" th:method="get">
+        <input type="submit" value="Назад главное меню"></form>
     <br>
-</form>
-
-<h3>Отфильтровать измерения по номеру ТС</h3>
-
-<form name="listById" th:action="@{/measure/listById}" th:method="get">
-    <select name="truck" th:object="${truckList}">
-        <option value="">--</option>
-        <option th:each="truck : ${truckList}"
-                th:value="${truck.getId()}"
-                th:text="${truck.getTruckNumber()}"></option>
-    </select>
-    <input type="submit" value="Фильтровать"></form>
-<br>
-<form name="backToMainMEnu" th:action="@{/}" th:method="get">
-    <input type="submit" value="Назад главное меню"></form>
-<br>
-<form name="ToMeasureList" th:action="@{/measure}" th:method="get">
-    <input type="submit" value="Список всех измерений">
-</form>
+    <form name="ToMeasureList" th:action="@{/measure}" th:method="get">
+        <input type="submit" value="Список всех измерений">
+    </form>
+</div>
 </body>
 </html>
