--- a/src/main/resources/templates/truckList.html
+++ b/src/main/resources/templates/truckList.html
@@ -6,86 +6,52 @@
 </head>
 
 <body>
-<form th:object="${greetingsMessage}">
-    <h2 th:text="${greetingsMessage}"></h2>
-</form>
+
+<div align="center">
+    <form th:object="${greetingsMessage}">
+        <h2 th:text="${greetingsMessage}"></h2>
+    </form>
+    <br>
+
+    <h2>Полный список транспортных средств</h2>
+
+    <table border="1">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Рег. номер</th>
+            <th>Тягач, 0,1 бар/кг</th>
+            <th>Прицеп, 0,1 бар/кг</th>
+            <th>Масса ТС, кг</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="truck, iterStat : ${truckList}">
+            <td th:text="${truck.getId()}"></td>
+            <td th:text="${truck.getTruckNumber()}"></td>
+            <td th:text="${truck.getFrontPrice()}"></td>
+            <td th:text="${truck.getRearPrice()}"></td>
+            <td th:text="${truck.getTruckWeight()}"></td>
+        </tr>
+        </tbody>
+
+    </table>
+</div>
 <br>
 
-<h2>Полный список транспортных средств</h2>
-
-<table border="1">
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Рег. номер</th>
-        <th>Тягач, 0,1 бар/кг</th>
-        <th>Прицеп, 0,1 бар/кг</th>
-        <th>Масса ТС, кг</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="truck, iterStat : ${truckList}">
-        <td th:text="${truck.getId()}"></td>
-        <td th:text="${truck.getTruckNumber()}"></td>
-        <td th:text="${truck.getFrontPrice()}"></td>
-        <td th:text="${truck.getRearPrice()}"></td>
-        <td th:text="${truck.getTruckWeight()}"></td>
-    </tr>
-    </tbody>
-
-</table>
-<br>
+<div align="center">
+    <form name="listById" th:action="@{/trucks/measure/new}" th:method="get">
+        <input type="submit" value="Посчитать"></form>
 
 
-<h3>Отфильтровать измерения по номеру ТС</h3>
-
-<form name="listById" th:action="@{/measure/listById}" th:method="get">
-    <select name="truck" th:object="${truckList}">
-        <option value="">--</option>
-        <option th:each="truck : ${truckList}"
-                th:value="${truck.getId()}"
-                th:text="${truck.getTruckNumber()}"></option>
-    </select>
-    <input type="submit" value="Посчитать"></form>
+    <form name="CreatNewTruck" th:action="@{/trucks/new}" th:method="get">
 
 
-<!--<div th:each="truck, ${truckList}">-->
+        <input type="submit" value="Создать новый ТС">
+    </form>
+    <form name="backToMainMEnu" th:action="@{/}" th:method="get">
+        <input type="submit" value="Назад главное меню"></form>
 
-<!--<div th:each="truck : ${truckList}">-->
-<!--    <a th:href="@{/trucks/{id}(id= ${truck.getId()})}">-->
-<!--        <span th:text="${truck.getTruckNumber()}"></span>-->
-<!--    </a>-->
-<!--</div>-->
-
-
-<!--<div th:each="truck2 :${truckList}">-->
-<!--    <form name="hz" th:method="delete" th:action="@{/trucks/{id}(id= ${truck2.getId()})}">-->
-<!--        <select >-->
-<!--            <option th:text="${truck2.getTruckNumber()}"-->
-<!--                    th:value="${truck2.getId()}"></option>-->
-
-<!--        </select>-->
-<!--        <input type="button" th:method="delete" value="Удалить бля">-->
-<!--    </form>-->
-
-<!--</div>-->
-<!--    <form name="deleteTruck" th:method="delete" th:action="@{/trucks/{id}(id = ${truck.getId()})}">-->
-<!--        <select name="truck" th:object="truck">-->
-<!--            <option value="">&#45;&#45;</option>-->
-<!--            <option th:each="truck : ${truckList}"-->
-<!--                    th:text="${truck.getTruckNumber()}"-->
-<!--                    th:value="${truck.getId()}"></option>-->
-<!--        </select>-->
-<!--        <input type="submit" value="Удалить бля">-->
-<!--    </form>-->
-
-<!--</div>-->
-
-
-<form name="CreatNewTruck" th:action="@{/trucks/new}" th:method="get">
-    <input type="submit" value="Создать новый ТС">
-</form>
-<form name="backToMainMEnu" th:action="@{/}" th:method="get">
-    <input type="submit" value="Назад главное меню"></form>
+</div>
 </body>
 </html>
