--- a/src/main/resources/templates/measureListId.html
+++ b/src/main/resources/templates/measureListId.html
@@ -13,7 +13,7 @@
         </form>
         <br>
 
-        <h2>Список измерений</h2>
+        <h2>Список измерений по номеру ТС:</h2>
         <table border="1">
             <thead>
             <tr>
