--- a/src/main/resources/templates/calculation.html
+++ b/src/main/resources/templates/calculation.html
@@ -15,8 +15,7 @@
 
 <div th:align="center">
     <form name="calculation" action="#" th:action="@{/trucks/measure/created}" th:method="post">
-        <select name="truckId" th:object="${truckList}">
-            <option value="">--</option>
+        <select name="truckId" >
             <option th:each="truck : ${truckList}"
                     th:value="${truck.id}"
                     th:text="${truck.truckNumber}"></option>
